# snakemake-lang

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-31-snakemake-lang-full-implementation.md
src/: errors.rs  lib.rs  main.rs  python.rs  serde_helpers.rs
src/ast/: global.rs  handler.rs  mod.rs  module.rs  rule.rs  use_rule.rs
src/compile/: generator.rs  mod.rs  source_map.rs
src/parser/: directive.rs  global.rs  handler.rs  mod.rs  module.rs  snakemake.rs  use_rule.rs
tests/: compare_parsers.py  compile_basic.rs  parse_basic.rs  parse_constructs.rs  parse_errors.rs  parse_rule.rs
tests/fixtures/: all_directives.smk  control_flow.smk  globals.smk  handlers.smk  module_use_rule.smk  multi_rule.smk  real_workflow.smk  simple_rule.smk
tests/python/: test_basic.py
